--- a/public/typography.css
+++ b/public/typography.css
@@ -1,39 +1,56 @@
-.h1 {
+
+h1 {
   @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
 }
-.h2 {
-  @apply scroll-m-20 border-b py-2 text-3xl font-semibold tracking-tight first:mt-0;
+
+h2 {
+  @apply mt-10 scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
 }
-.h3 {
-  @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+
+h3 {
+  @apply mt-8 scroll-m-20 text-2xl font-semibold tracking-tight;
 }
-.h4 {
-  @apply scroll-m-20 text-xl font-semibold tracking-tight;
-}
-.lead {
-  @apply text-xl text-muted-foreground;
-}
-.p {
+
+p {
   @apply leading-7 [&:not(:first-child)]:mt-6;
 }
-.large {
-  @apply text-lg font-semibold;
+
+a {
+  @apply font-medium text-primary underline underline-offset-4;
 }
-.small {
-  @apply text-sm font-medium leading-none;
+
+blockquote {
+  @apply mt-6 border-l-2 pl-6 italic;
 }
-.muted {
-  @apply text-sm text-muted-foreground;
+
+ul {
+  @apply my-6 ml-6 list-disc;
 }
-.inlineCode {
-  @apply relative rounded bg-muted px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
+
+li {
+  @apply mt-2;
 }
-.multilineCode {
-  @apply relative rounded bg-muted p-4 font-mono text-sm font-semibold overflow-x-auto;
+
+table {
+  @apply w-full;
 }
-.list {
-  @apply my-6 ml-6 list-disc [&>li]:mt-2;
+
+thead {
+  @apply border-t;
 }
-.quote {
-  @apply mt-6 border-l-2 pl-6 italic text-muted-foreground;
+
+tr {
+  @apply m-0 border-t p-0 even:bg-muted;
+}
+
+th {
+  @apply border px-4 py-2 text-left font-bold [&[align=center]]:text-center [&[align=right]]:text-right;
+}
+
+td {
+  @apply border px-4 py-2 text-left [&[align=center]]:text-center [&[align=right]]:text-right;
+}
+
+div {
+  @apply my-6 w-full overflow-y-auto;
 }
